--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ravindu",
   "license": "ISC",
   "dependencies": {
+    "async-handler": "^0.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
   }
