--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "Ravindu",
   "license": "ISC",
   "dependencies": {
-    "async-handler": "^0.0.3",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.9.6"
   }
 }
